--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "for project"
 authors = ["Евгения Ольшанова <olshanova1995@gmail.com>"]
 readme = "README.md"
+repository = "https://github.com/SovaDekster/python-project-49"
 packages = [
 {include = "brain_games" },
 ]
