--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-.venv 
-__pycache__/
-scripts/__pycache__/
+.venv/
+__pycache__
+brain_games/scripts/__pycache__/
 dist/
+brain_games/__pycache__/
+brain_games/games/__pycache__/
+.coverage
+coverage.xml
